--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -32,7 +32,7 @@
 		margin-bottom: 1rem
 		font-size: 1.9rem
 	.hero
-		height: 80vh
+		height: 90vh
 		&__scroll-down
 			display: none
 		&__content
@@ -43,7 +43,7 @@
 			margin-bottom: 3.1rem
 		&__button
 			display: block
-			min-width: 28.3rem
+			min-width: 90vw
 			margin-bottom: 2.14rem
 			font-size: 1.12rem
 @media screen and ( max-height: 550px )
